...
                            <constraint firstItem="JhP-BE-MTc" firstAttribute="top" secondItem="6ia-Ac-xKv" secondAttribute="bottom" id="2tD-v3-aPi"/>
                            <constraint firstItem="vlB-0i-ANJ" firstAttribute="top" secondItem="JhP-BE-MTc" secondAttribute="bottom" id="UB5-st-7ZK"/>
                            <constraint firstAttribute="trailing" secondItem="JhP-BE-MTc" secondAttribute="trailing" id="eF0-Qc-eha"/>
                            <constraint firstItem="JhP-BE-MTc" firstAttribute="leading" secondItem="Oew-kM-BcW" secondAttribute="leading" id="pzk-G1-Gcx"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="History" id="6cD-FN-gcV">
                        <barButtonItem key="leftBarButtonItem" systemItem="trash" id="ydi-T0-fM7">
                            <connections>
                                <action selector="trashButtonTapped:" destination="0nt-h4-D2c" id="d99-G2-i3b"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="camera" id="ZgF-CJ-LoE">
...
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </view>
                    <navigationItem key="navigationItem" title="Scan" id="WNf-Ke-8LG">
                        <barButtonItem key="leftBarButtonItem" image="historyIcon" id="I92-k5-Rgj">
                            <connections>
                                <segue destination="xNq-Fc-nfa" kind="popoverPresentation" popoverAnchorBarButtonItem="I92-k5-Rgj" id="N0T-Wd-uMf">
                                    <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
                                </segue>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" image="settingsIcon" id="TVp-II-SI0">
                            <connections>
                                <segue destination="Atr-jJ-ENY" kind="presentation" id="t98-12-HWx"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                </viewController>
...
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="B6e-ug-6cv" id="wwe-Og-jP8">
                                    <frame key="frameInset" width="375" height="121"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w85-E1-fQC">
                                            <frame key="frameInset" minX="20" minY="20" width="560" height="80"/>
                                            <state key="normal" title="Leave feedback"/>
                                            <connections>
                                                <action selector="leaveFeedbackTapped:" destination="B6e-ug-6cv" eventType="touchUpInside" id="dEK-Kg-hkp"/>
                                            </connections>
                                        </button>
                                    </subviews>
                                    <constraints>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="EXq-A9-ozV" id="zTw-ZQ-ng3"/>
                            <outlet property="delegate" destination="EXq-A9-ozV" id="ZaD-Cw-18y"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Settings" id="YM1-rP-1hN">
                        <barButtonItem key="leftBarButtonItem" systemItem="done" id="OEp-KP-R7d">
                            <connections>
                                <action selector="doneButtonTapped:" destination="EXq-A9-ozV" id="RQv-UB-nzJ"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
