...
    
    @IBAction func cameraButtonTapped(_ sender: AnyObject) {
        self.dismiss(animated: true, completion: nil)
    }
    @IBAction func trashButtonTapped(_ sender: AnyObject) {
        let alert = UIAlertController(title: "Delete History", message: "Are you sure you want to delete your scan history?", preferredStyle: .alert)
        let deleteAction = UIAlertAction(title: "Delete", style: .destructive){
            (action: UIAlertAction!) -> Void in
            self.barcodeStore.removeHistory()
        }
        let cancelAction = UIAlertAction(title: "Cancel", style: .cancel, handler: nil)
        alert.addAction(deleteAction)
        alert.addAction(cancelAction)
        self.present(alert, animated: true, completion: nil)
    }
    
    func tableView(_ tableView: UITableView, didSelectRowAt indexPath: IndexPath) {
...
