...
            UINavigationBar.appearance().barTintColor = UIColor.flatMint()

            let controller = MFMailComposeViewController()
            controller.navigationBar.tintColor = UIColor.white
            controller.mailComposeDelegate = self
            controller.setToRecipients(["ephraimkunz@me.com"])
            controller.setSubject("Feedback for MovieRating")
            controller.setMessageBody(body, isHTML: false)
            
            self.present(controller, animated: true, completion: nil)
        }
        else{
            let alertController = UIAlertController( title:"Error sending feedback", message:"Mail must be set up on this device to send feedback", preferredStyle: .alert)
...
